# Kenzie-CyberShop-API

./: .env.example  .gitignore  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt  schema.yaml
_core/: settings.py  urls.py
addresses/: models.py  permissions.py  serializers.py  views.py
addresses/migrations/: 0001_initial.py  0002_initial.py  0003_address_default.py  0004_alter_address_user.py
carts/: models.py  serializers.py  views.py
carts/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
orders/: apps.py  models.py  serializers.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
products/: models.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py
requests/: models.py  serializers.py  urls.py  views.py
requests/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_admin.py  create_non_seller.py  create_random_products.py  create_seller.py  create_seller2.py
users/migrations/: 0001_initial.py
